Release notes for Agora-Moodle2 (http://agora.xtec.cat)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_moodle2

Changes in progress
---------------------------------------------------------------------------------------
- Upgraded Moodle from v3.6.5 to v3.6.6
- Re-added Catalonia to countries list
- Marsupial: Updated components
- Upgraded all wiris plugins
- Upgraded module clickedu
- Upgraded module geogebra
- Upgraded module hot potatoes
- Upgraded module H5P
- Upgraded block "completion progress"
- Upgraded question type "ordering"


Changes 19.08.29
---------------------------------------------------------------------------------------
- Fixed cache pollution due to XTEC patches
- Improved cache definitions


Changes 19.07.24
---------------------------------------------------------------------------------------
- Upgraded Moodle from v3.4.8 to v3.6.5
- Updated translation files
- Modified theme XTEC2 for compatibility to Moodle v3.6.5
- Upgraded all wiris plugins
- Upgraded module choicegroup
- Upgraded module hotpot
- Upgraded module H5P
- Upgraded module journal
- Upgraded module questionnaire
- Upgraded block "completion progress"
- Upgraded question type "ordering"
- Upgraded question type "wq"
- Local agora: Removed old message_notifier plugin
- Local agora: Disallow theme boost


Changes 19.04.15
---------------------------------------------------------------------------------------
- Moodle upgraded to from 3.4.8
- Align availability label next to the activity title
- Add the temp configuration to the agora config file
- Updated LangPacks
- Updated auth/googleauth2
- Updated mod/hvp
- Updated them/xtec2
- Updated mod/geogebra
- Updated mod/jclic


Changes 18.11.23
---------------------------------------------------------------------------------------
- Moodle upgraded to from 3.4.6
- Fix presentation in rgrade